@startuml

class Car {
  +ObjectId id
  +string plate_number
  +string make
  +string model
  +int year
  +string color
  +float daily_rate
  +string status
  +datetime created_at
  +mark_rented(): void
  +mark_available(): void
  +update_status(status: string): void
}

class Customer {
  +ObjectId id
  +string name
  +string email
  +string phone
  +string driver_license_number
  +string address
  +datetime created_at
  +update_info(name?: string, email?: string, phone?: string): void
}

class Rental {
  +ObjectId id
  +ObjectId car_id
  +ObjectId customer_id
  +datetime start_date
  +datetime end_date
  +float daily_rate
  +float total_amount
  +string status
  +datetime created_at
  +datetime returned_at
  +calculate_total(): float
  +mark_returned(): void
  +is_active(): bool
}

class Payment {
  +ObjectId id
  +ObjectId rental_id
  +float amount
  +string method
  +string status
  +datetime paid_at
  +datetime created_at
  +process(method: string): Payment
  +mark_paid(): void
}

class RentalService {
  +create_rental(customer_id: str, car_id: str, start_date: datetime, end_date: datetime): Rental | None
  +return_rental(rental_id: str): Rental | None
}

class InMemoryBackend {
  +list_cars(): list
  +get_car(car_id: str)
  +create_car(data: dict)
  +update_car(car_id: str, update: dict)
  +delete_car(car_id: str)
  +list_customers(): list
  +get_customer(customer_id: str)
  +create_customer(data: dict)
  +update_customer(customer_id: str, update: dict)
  +delete_customer(customer_id: str)
  +create_rental(customer_id: str, car_id: str, start_date, end_date)
  +return_rental(rental_id: str)
  +list_rentals(): list
  +get_rental(rental_id: str)
  +reset_all(): void
}

Car "1" <-- "*" Rental : rents
Customer "1" <-- "*" Rental : makes
Rental "1" <-- "*" Payment : paid-by

RentalService ..> Car : checks/updates
RentalService ..> Rental : creates/updates
InMemoryBackend ..> Car : stores
InMemoryBackend ..> Customer : stores
InMemoryBackend ..> Rental : stores
InMemoryBackend ..> Payment : stores

@enduml
